--- a/com-medico/src/main/resources/application.properties
+++ b/com-medico/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-# Configuration file
-# key = value
+# configure the MongoDB client for a replica set of two nodes
+quarkus.mongodb.connection-string = mongodb+srv://com-medico:coronavirus@medico-cluster.j40v7.azure.mongodb.net/medico?retryWrites=true&w=majority
+# mandatory if you don't specify the name of the database using @MongoEntity
+quarkus.mongodb.database = medico
